change unit group tags
